Update Buoi2 ThucHanh

--- a/Buoi2_JS/runJS.html
+++ b/Buoi2_JS/runJS.html
@@ -8,6 +8,17 @@
 <body>
     <!-- <script src="./ThucHanh/Bai1.js"></script>
     <script src="./ThucHanh/Bai2.js"></script> -->
-    <script src="./ThucHanh/Bai3.js"></script>
+    <!-- <script src="./ThucHanh/Bai3.js"></script> -->
+    <label for="inputNumberA">Nhap so a : </label>
+    <input type="number" id="inputNumberA">
+    <br/>
+    <label for="inputNumberB">Nhap so a : </label>
+    <input type="number" id="inputNumberB">
+    <br/>
+    <button onclick="checkMultiples()">Tinh</button>
+    <div id="innerHTML">
+        
+    </div>
+    <script src="./ThucHanh/Bai3_BoSung.js"></script>
 </body>
 </html>
