--- a/Buoi2_JS/runJS.html
+++ b/Buoi2_JS/runJS.html
@@ -9,7 +9,7 @@
     <!-- <script src="./ThucHanh/Bai1.js"></script>
     <script src="./ThucHanh/Bai2.js"></script> -->
     <!-- <script src="./ThucHanh/Bai3.js"></script> -->
-    <label for="inputNumberA">Nhap so a : </label>
+    <!-- <label for="inputNumberA">Nhap so a : </label>
     <input type="number" id="inputNumberA">
     <br/>
     <label for="inputNumberB">Nhap so a : </label>
@@ -17,8 +17,12 @@
     <br/>
     <button onclick="checkMultiples()">Tinh</button>
     <div id="innerHTML">
-        
     </div>
-    <script src="./ThucHanh/Bai3_BoSung.js"></script>
+    <script src="./ThucHanh/Bai3_BoSung.js"></script> -->
+
+    <!-- <script src="./ThucHanh/Bai4_4.1.js"></script> -->
+    <!-- <script src="./ThucHanh/Bai4_4.2.js"></script> -->
+    <!-- <script src="./ThucHanh/Bai4_4.3.js"></script> -->
+    <script src="./ThucHanh/Bai4_4.4.js"></script>
 </body>
 </html>
