--- a/Buoi2_JS/runJS.html
+++ b/Buoi2_JS/runJS.html
@@ -23,6 +23,7 @@
     <!-- <script src="./ThucHanh/Bai4_4.1.js"></script> -->
     <!-- <script src="./ThucHanh/Bai4_4.2.js"></script> -->
     <!-- <script src="./ThucHanh/Bai4_4.3.js"></script> -->
-    <script src="./ThucHanh/Bai4_4.4.js"></script>
+    <!-- <script src="./ThucHanh/Bai4_4.4.js"></script> -->
+    <script src="./ThucHanh/Bai4_4.5.js"></script>
 </body>
 </html>
