--- a/Buoi2_JS/runJS.html
+++ b/Buoi2_JS/runJS.html
@@ -24,6 +24,27 @@
     <!-- <script src="./ThucHanh/Bai4_4.2.js"></script> -->
     <!-- <script src="./ThucHanh/Bai4_4.3.js"></script> -->
     <!-- <script src="./ThucHanh/Bai4_4.4.js"></script> -->
-    <script src="./ThucHanh/Bai4_4.5.js"></script>
+    <!-- <script src="./ThucHanh/Bai4_4.5.js"></script> -->
+
+    <form id="currency-form">
+        <label>Amount</label>
+        <input type="number" id="amount" name="amount">
+        <label for="from-currency">From Currency:</label>
+        <select id="from-currency">
+            <option value="VND">Vietnamese Dong</option>
+            <option value="USD">US Dollar</option>
+        </select>
+
+        <label for="to-currency">To Currency:</label>
+        <select id="to-currency">
+            <option value="USD">US Dollar</option>
+            <option value="VND">Vietnamese Dong</option>
+        </select>  
+        <button type="button" onclick="convertCurrency()">Convert</button>
+    </form>
+    <div id="result-convert">
+
+    </div>
+    <script src="./ThucHanh/Bai5.js"></script>
 </body>
 </html>
